Preview cards horizontal scroll

--- a/src/App.css
+++ b/src/App.css
@@ -435,7 +435,7 @@ a {
   position: absolute;
   width: .6em;
   height: .6em;
-  top: .9em;
+  top: 1em;
   right: 1.2em;
   border-right: .18em solid transparent;
   border-bottom: .18em solid transparent;
