--- a/src/components/jobad/JobadCard.css
+++ b/src/components/jobad/JobadCard.css
@@ -1,7 +1,8 @@
 .jobad-card {
 	cursor: pointer;
 	transition: .2s;
-	width: 18.3rem;
+	max-width: 16rem;
+	width: 100%;
     height: 100%;
 	padding: 1rem;
 	border-radius: .3rem;
@@ -74,7 +75,7 @@
 @media only screen and (min-width: 400px) {
 
 	.jobad-card {
-		width: 20.8rem;
+		max-width: 20.5rem;
 	}
 
     .jobad-card__name {
