--- a/src/pages/eventlist/Events.css
+++ b/src/pages/eventlist/Events.css
@@ -11,6 +11,37 @@
   padding-top: 1rem;
 }
 
+
+/* Seperating line */
+
+.event-list-separator {
+  position: relative;
+}
+
+.event-list-separator__text {
+  background-color: var(--c-bg-body);
+  color: var(--c-font-discret);
+  font-weight: 500;
+  font-size: .9rem;
+  letter-spacing: .15em;
+  z-index: 10;
+  display: block;
+  width: fit-content;
+  padding: 0 1rem;
+  margin: 0 auto;
+  position: relative;
+}
+
+.event-list-separator::before {
+  content: '';
+  position: absolute;
+  top: 50%;
+  width: 100%;
+  height: .15rem;
+  background-color: var(--c-corner-decor);
+}
+
+
 @media only screen and (min-width: 400px) {
 
   .events {
@@ -38,7 +69,7 @@
   }
 
   .events__filter-container {
-    padding: .5rem 0 0 0;
+    padding: 0;
     position: relative;
   }
 
