--- a/src/App.css
+++ b/src/App.css
@@ -96,6 +96,7 @@
   --c-bg-box: var(--c-grey-33);
   --c-bg-box-hover: var(--c-grey-39);
   --c-bg-topbar: rgba(20, 20, 20, 0.6);
+  --c-bg-topbar-fallback: rgba(32, 31, 30, 0.99);
   --c-bg-footer: var(--c-grey-16);
   /* hero section */
   --c-bg-welcome: radial-gradient(circle, rgba(10,10,10) 0%, rgba(24,24,24) 100%);
@@ -177,9 +178,10 @@
   --w-page: 75rem;
   
 
-  /* shadows (only being uesd in light mode) */ 
+  /* shadows */ 
   --shadow-box: none;
   --drop-shadow-img: none;
+  --topbar-dropdown-shadow: 0 0.1rem 0.5rem rgba(3,3,3,0.5);
 
 }
 
@@ -191,6 +193,7 @@
   /* backgrounds */
   --c-bg-body: var(--c-grey-240);
   --c-bg-topbar: rgba(250,250,250, 0.85);
+  --c-bg-topbar-fallback: rgba(253, 251, 250, 0.99);
   --c-bg-footer: var(--c-grey-33);
   --c-bg-box: var(--c-grey-250);
   --c-bg-box-hover: var(--c-white);
@@ -254,6 +257,7 @@
   /* shadows */
   --shadow-box: 0 .1rem .5rem .1rem rgba(200,200,200, 0.3);
   --drop-shadow-img: drop-shadow(.08rem .08rem .08rem rgba(90, 90, 90, 0.5));
+  --topbar-dropdown-shadow: 0 0.1rem 0.5rem rgba(0,0,0,0.1);
 
 }
 
@@ -319,7 +323,7 @@ header {
 
 @supports not ((-webkit-backdrop-filter: none) or (backdrop-filter: none)) {
   header {
-    background-color: rgba(20, 20, 20, 0.95);
+    background-color: var(--c-bg-topbar-fallback);
   }
 }
 
