--- a/src/components/svg/defaultbanners/defualt-banner.css
+++ b/src/components/svg/defaultbanners/defualt-banner.css
@@ -1,5 +1,8 @@
-@media only screen and (min-width: 800px) {
-    .default-banner {
-        border-radius: .3rem;
-    }
+.default-banner {
+    border-radius: .3rem;
+}
+
+.default-banner__svg {
+    width: 100%;
+    display: block;
 }
