--- a/src/App.css
+++ b/src/App.css
@@ -139,10 +139,15 @@
   /* decoration */
   --c-corner-decor: var(--c-grey-48);
 
+
+  /* image carousel */
+  --c-image-carousel-dot: var(--c-grey-100);
+  --c-image-carousel-dot-active: var(--c-white);
+
   
   /* theme toggle */
-  --c-sun: var(--c-yellow);
-  --c-moon: var(--c-purple);
+  --c-sun: var(--c-white);
+  --c-moon: var(--c-grey-69);
 
   
   /* tag colors */
@@ -180,8 +185,8 @@
 
 
   /* distances */
-  --h-topbar: 5rem;
-  --w-page: 75rem;
+  --h-topbar: 4rem;
+  --w-page: 73rem;
   
 
   /* shadows */ 
@@ -189,6 +194,12 @@
   --drop-shadow-img: none;
   --topbar-dropdown-shadow: 0 0.1rem 0.5rem rgba(3,3,3,0.5);
 
+}
+
+@media only screen and (min-width: 800px) {
+  :root {
+    --h-topbar: 5rem;
+  }
 }
 
 /* light mode */
@@ -266,6 +277,11 @@
   --c-corner-decor: var(--c-grey-196);
 
 
+  /* image carousel */
+  --c-image-carousel-dot: var(--c-grey-180);
+  --c-image-carousel-dot-active: var(--c-grey-69);
+
+
   /* shadows */
   --shadow-box: 0 .1rem .5rem .1rem rgba(200,200,200, 0.3);
   --drop-shadow-img: drop-shadow(.08rem .08rem .08rem rgba(90, 90, 90, 0.5));
@@ -312,11 +328,40 @@ main {
   min-height: calc(100vh - var(--h-topbar) - var(--h-topbar));
 }
 
+
+/*-------------*/
+/* page layout */
+/*-------------*/
+
+/*
+  five column system, where second and forth colum function as a margin to the edges.
+  three utility classes for width: normal (center), full-width or without-gaps (center but without the 'margin' columns)
+*/
+
 .page-container {
-  max-width: var(--w-page);
-  width: 100%;
-  margin: auto;
+  display: grid;
+  grid-template-columns: 1fr 1rem minmax(0, var(--w-page)) 1rem 1fr;
 }
+
+.page-section--normal {
+  grid-column: 3;
+}
+
+.page-section--full-width {
+  grid-column: 1 / -1; /* Span across all columns */
+}
+
+.page-section--without-gaps {
+  grid-column: 2 / 5;
+}
+
+@media only screen and (min-width: 800px) {
+  .page-container {
+    display: grid;
+    grid-template-columns: 1fr 2rem minmax(0, var(--w-page)) 2rem 1fr;
+  }
+}
+
 
 header {
   position: fixed;
@@ -347,7 +392,7 @@ footer {
 /* Headlines */
 
 .heading-1 {
-  margin: 1rem;
+  margin: 1rem 0;
   z-index: 2;
   font-weight: 600;
   font-size: 2rem;
@@ -377,6 +422,19 @@ footer {
   margin: 1em 0 .5em 0;
   font-size: 1.2rem;
   color: var(--c-font-title);
+}
+
+
+.heading-2--icon {
+  display: flex;
+  align-items: center;
+}
+
+.heading-2__icon {
+  font-size: 1.2em;
+  line-height: inherit;
+  vertical-align: top;
+  margin-right: .4em;
 }
 
 
@@ -680,5 +738,35 @@ abbr {
 
   .p--columes .p--highlighted {
     margin-top: 0;
+  }
+}
+
+
+/* skeleton loading */
+.skeleton {
+  background-color: var(--c-grey-69);
+  border-radius: .3rem;
+  position: relative;
+  overflow: hidden;
+}
+
+.skeleton::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: -150px;
+  height: 100%;
+  width: 150px;
+  background: linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(255,255,255,0.05) 50%, rgba(255,255,255,0) 100%);
+  animation: skeleton-loading 1.5s infinite;
+}
+
+@keyframes skeleton-loading {
+  from {
+      left: -150px;
+  }
+  to {
+      left: 100%;
   }
 }
