--- a/src/components/accordion/Accordion.css
+++ b/src/components/accordion/Accordion.css
@@ -1,13 +1,12 @@
 .accordion {
     background-color: var(--c-bg-box);
     overflow: hidden;
-    margin: 0 1rem;
     border-radius: .3rem;
     box-shadow: var(--shadow-box);
 }
 
 .accordion__nav-item {
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     padding: .5rem;
     transition: .2s;
     cursor: pointer;
@@ -21,7 +20,7 @@
     font-size: 2.5rem;
     line-height: 2.25rem;
     transition: .3s;
-    margin: 0 .5rem 0 -.2rem;
+    margin: 0 .4rem 0 -.2rem;
     color: var(--c-link); /* the --c-link var has darker shade on lightmode for better contrast */
 }
 
@@ -32,8 +31,7 @@
 .accordion__content {
     max-height: 0;
     overflow: hidden;
-    /* got these transitions from a tutorial.
-       A simple "all .3s" does not work and I dont know why */
+    /* A simple "all .3s" does not work and I dont know why */
     transition: all .5s cubic-bezier(0,1,0,1);
 }
 
@@ -55,12 +53,9 @@
 
 
 @media only screen and (min-width: 800px) {
-    .accordion {
-        margin: 0;
-    }
-
     .accordion__nav-item {
         padding: 1rem;
+        font-size: 1.5rem;
     }
 
     .accordion__content-item {
