--- a/src/pages/eventlist/Events.css
+++ b/src/pages/eventlist/Events.css
@@ -1,9 +1,103 @@
+/* events top bar */
+
+.events-top-bar {
+  display: flex;
+  justify-content: space-between;
+}
+
+.events-top-bar__button {
+  border: none;
+  border-radius: .3rem;
+  background: none;
+  border: .13rem solid var(--c-btn-bg-discret);
+  cursor: pointer;
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
+.events-top-bar__button:hover {
+  background-color: var(--c-btn-bg-discret);
+}
+
+
+.events-top-bar__view-toggle {
+  justify-content: end;
+}
+
+.button-group {
+  border-radius: .3rem;
+  border: .13rem solid var(--c-btn-bg-discret);
+  display: block;
+  height: fit-content;
+}
+
+.button-group__button {
+  border: none;
+  background: none;
+  padding: .3rem 1rem;
+  line-height: 1.5rem;
+  border-left: .13rem solid var(--c-btn-bg-discret);
+}
+
+.button-group__button:first-child {
+  border-left: none;
+}
+
+.button-group__button:not(.button-group__button--active):hover {
+  cursor: pointer;
+  background-color: var(--c-btn-bg-discret);
+}
+
+.button-group__button--active i {
+  color: var(--c-primary);
+}
+
+.events-top-bar__filter-toggle {
+  padding: .3rem 1.2rem;
+}
+
+.events-top-bar__filter-toggle .events-top-bar__icon {
+  padding-left: .5em;
+  font-size: 1.4em;
+}
+
+.events-top-bar__icon {
+  font-size: 1.4rem;
+  transition: .2s;
+  line-height: 1.5rem;
+  border-radius: .3rem;
+}
+
+.events-top-bar__button:hover i {
+  color: var(--c-font-main);
+}
+
+.events-top-bar__filter-toggle--active:hover i {
+  color: var(--c-primary);
+}
+
+.events-top-bar__filter-toggle--active i {
+  color: var(--c-primary);
+}
+
+
+/* events */
+
 .events {
   padding: 0 .5rem;
 }
 
 .events__filter-container {
-  padding: 1rem
+  padding: 1rem 1.5rem;
+  display: none;
+  background-color: var(--c-bg-box);
+  margin: .5rem;
+  border-radius: .3rem;
+  box-shadow: var(--shadow-box);
+}
+
+.events__filter-container--open {
+  display: block;
 }
 
 .events__list {
@@ -11,11 +105,22 @@
   padding-top: 1rem;
 }
 
+.events__list--grid-view {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 1rem;
+}
 
-/* Seperating line */
+
+/* Seperating week devider */
 
 .event-list-separator {
   position: relative;
+  margin: 1.2rem 0 .2rem 0;
+}
+
+.event-list-seperator--first {
+  margin-top: .2rem;
 }
 
 .event-list-separator__text {
@@ -24,7 +129,7 @@
   font-weight: 500;
   font-size: .9rem;
   letter-spacing: .15em;
-  z-index: 10;
+  z-index: 2;
   display: block;
   width: fit-content;
   padding: 0 1rem;
@@ -37,28 +142,68 @@
   position: absolute;
   top: 50%;
   width: 100%;
-  height: .15rem;
+  height: .13rem;
   background-color: var(--c-corner-decor);
 }
 
 
 @media only screen and (min-width: 400px) {
+  .events-top-bar {
+    gap: 1rem;
+    padding: 0;
+  }
+
+  .events__filter-container {
+    margin: .5rem 0;
+  }
 
   .events {
     padding: 0 1rem;
   }
+}
 
+@media only screen and (min-width: 600px) {
+  .events-top-bar {
+    justify-content: start;
+  }
+
+  .events__list--grid-view {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .events__list--grid-view .event-list-separator {
+    display: none;
+  }
+}
+
+@media only screen and (min-width: 800px) {
+
+  .events {
+    padding: 0 2rem;
+  }
+
+  .events__list--grid-view {
+    gap: 2rem;
+  }
 }
 
 @media only screen and (min-width: 1000px) {
+
+  .events-top-bar {
+    padding: 0 0 1rem 0;
+    justify-content: end;
+  }
+
+  .events-top-bar__filter-toggle {
+    display: none;
+  }
 
   .events {
     display: grid;
     grid-template-columns: 17rem auto;
     grid-template-areas: 'left right';
     gap: 3vw;
-    padding: 2rem 1rem;
-  }  
+  }
 
   .events__section--left {
     grid-area: left;
@@ -70,7 +215,11 @@
 
   .events__filter-container {
     padding: 0;
+    margin: 0;
     position: relative;
+    display: block;
+    background: none;
+    box-shadow: none;
   }
 
   .events__filter-container:after {
